src/tests/functionality/assignment_2_types_variables/valid/01_mandatory_basic_types_variables.c
int main() {
    int x = 5;
    float y = 3.5;
    char c = 'a';

    x = x + 1;
    y = y + 1.5;
    c = 'b';

    return x;
}
