src/tests/functionality/assignment_2_types_variables/invalid_semantic/08_mandatory_const_pointer_write_error.c
int main() {
    int x = 1;

    const int* p = &x;
    *p = 5;

    return x;
}
